Fix kicker icon color for fullwidth teaser on mobile

--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -104,7 +104,8 @@
 			@extend %teaser-kicker-logo--zplus-register
 		&--tag
 			@extend %teaser-kicker-logo--tag
-			color: inherit
+			+respond-min($break-tablet-min)
+				color: inherit
 	&__title
 		@extend %teaser-title
 		font-size: em(24px)
